# CodeReviewAi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-poetry.yml  docker-compose.yml  env_example  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: api.py  review.py
app/bash_scripts/: coverage_test.sh  start.sh
app/core/: settings.py
app/repo/: review.py
app/schemas/v1/: __init__.py  constants.py  review.py
app/tests/: test_review.py
app/utils/: redis.py
